# bachelor-thesis

./: .gitignore  README.md  doc.tex  titlepage.tex
doc/: acronym.tex  config.autoref.tex  config.bibtex.tex  config.colors.tex  config.fonts.tex  config.git.tex  config.imports.tex  config.landscape.tex  config.listing.tex  config.pgfplots.tex  config.requirements.tex  config.tikz.tex  declaration.tex  doc.glsdefs  doc.tex  fancy_cite.tex  fancy_quote.tex  general.bib  gloassary.tex  innovationsartikel.semi-tex  legal.tex  rust.bib  short_version.tex  thanks.tex  titlepage.tex  update_git_info.sh
doc-cover/: config.imports.tex  doc.tex  titlepage.tex
doc-sources/: Ber17.html  Chu.html  Cri15.html  Ententest – Wikipedia.html  Gor17.html  Gou17.html  Grü17.html  Hoa09.html  ITUa.html  ITUb.html  Jr93.html  LLVa.html  LLVb.html  Lei17.html  Ler17.html  Mat16.html  Men.html  Ove18.html  Rus15.html  Rus17.html  Rus18b.html  Rusa.html  Rusb.html  Rusc.html  Rusd.html  Ruse.html  Rusf.html  Rusg.html  Rush.html  Rusi.html  Rusj.html  Rusk.html  Rusl.html  Rusm.html  Rusn.html  Ruso.html  Rusp.html  Rusq.html  Rusr.html  Russ.html  (+15 more)
doc-sources/Ber17-Dateien/: 0.js  1.js  1tKaA1TW02I.html  4.js  a.html  add-device-to-html.js  heise.js  heiseresp.css  horesp.css  iam.js  webcomponents.js
doc-sources/Chu-Dateien/: css.css  style.css
doc-sources/Cri15-Dateien/: application-f797174c29163abc73273736a084e2a23712ecb96f84037fe.js  desktop_1_28aeae38384ae438af1ef9f8aa935ba7d7374d9b.css  desktop_theme_1_6314bc621da08d76ee9232ff764fcb429e1dec52.css  en-9cbbc22169d0e9cd58c3f918d798e8aa4eb5857eb18a4f79b44212c06f.js  plugin-7786f92e8164b8162a3b613913e66b2accf1b96c1e9414733dbbea.js  plugin-third-party-1e5156648f71a8c8e7106ed6939d4d6472ceeadabc.js
doc-sources/Ententest – Wikipedia-Dateien/: load.css
doc-sources/Gou17-Dateien/: main.css
doc-sources/Grü17-Dateien/: account_js_dt18_1_0.js  adsbygoogle.js  async.js  front.html  gg2_1-0-0-min.css  golem_cpxl_113-min.js  golem_csi-114-min.js  golem_main_114-min.css  golem_main_114-min.js  golemgallery2_85-min.js  iam.js  minibanner_flat_620.html  sdcv.js  trial-social-s3.html
doc-sources/Hoa09-Dateien/: Er.html  Evan.html  Fe.html  Phi.html  PresentationUI_notes.js  a.js  combinedJs.js  css.css  expandables.js  forum.js  gpt.js  site_en.css  style.css  videoPlayercombinedJsPresentation.js
doc-sources/ITUa-Dateien/: corev15.css  itu-base.css  itu-functions.js  itu-t.css  ms-rteCustom-ITUv6.css  strings.js  webtrends.js  wtid.js
doc-sources/ITUb-Dateien/: core.js  initstrings.js  itu-main.css  itu-own-functions.js  js.js
doc-sources/Ler17-Dateien/: a  cargo-a65c73e9e1183ac3d9fdd9ba4262693e.css  cargo-b6f93141778428762d077086fc48170e.js  vendor-886aaa732d80de1c0d1100356ca9486a.js
doc-sources/Men-Dateien/: conferences.css  global.css
doc-sources/Ove18-Dateien/: 2018.css  bootstrap-tabcollapse.js  full.js  maps.js  stub.js
doc-sources/Rus18b-Dateien/: github-594f53486c0046606a493a8f17258e86.css
doc-sources/Rusb-Dateien/: bootstrap.xml  forge.xml  style.xml
doc-sources/Rusc-Dateien/: playpen.html
doc-sources/Rusj-Dateien/: searchindex.js
doc-sources/Rusq-Dateien/: trait.js
doc-sources/Rusr-Dateien/: trait.js
doc-sources/Russ-Dateien/: search-index.js
doc-sources/Rusw-Dateien/: github-58d010abf5dc99f1024c8edad0e0c924.js
doc-sources/Sch13-Dateien/: 288689636920174.js  developer.css  heise.css  iam.js
doc-sources/Wik17b-Dateien/: load.css  load.php
doc-sources/Wik18a-Dateien/: load_002.css
doc-sources/Wik18b-Dateien/: load_002.css
doc-sources/Wik18c-Dateien/: load_003.css
doc-sources/fgi17-Dateien/: reddit-init.js
doc-sources/kyr17-Dateien/: luouIRrHZv0OrCvkwxOIW6DB2yZ7aNlYK3jb0ZF14zY.css  reddit.js
doc-sources/wit-Dateien/: frameworks-fb2d2aba81dc8eaf1006e47ef554c36b.js
doc/dia/: architecture.dia  architecture.ps  architecture_v2.dia  architecture_v2.ps  architecture_v2_packages.dia  architecture_v2_packages.ps  channel.dia  channel.ps  channel_sep.dia  channel_sep.ps  crates.dia  design_decode_state.dia  design_decode_state.ps  design_encode_state.dia  libshim.dia  libshim.ps
doc/grundlagen/: rust.tex
doc/images/: MECView_Arch_de_V1_mod.xcf
doc/innovationsartikel/: WatzkoMichael.tgz
doc/sections/: analysis.tex  asn.bib  asn.tex  conclusion.tex  design.tex  evaluation.tex  help.info  impl.channels.rs  impl.command.algorithm.rs  impl.command.client.rs  impl.commands.facade.rs  impl.commands.rs  impl.constructor.destructor.rs  implementation.tex  intro.tex  performance.bib  performance.tex  requirements.tex  rust.bib  rust.cargo.txt  rust.classic.txt  rust.fn.add.rs  rust.fopen.c  rust.fopen.rs  rust.for.rs  rust.lock.rs  rust.loop.rs  rust.match.iflet.rs  rust.match.large.rs  rust.memory.rs  rust.owner.free.c  rust.owner.free.rs  rust.ownership.rs  rust.position_offset.c  rust.position_offset.rs  rust.tex  (+8 more)
exam_examples/ownership_pro_con/: Cargo.toml
exam_examples/ownership_pro_con/src/: main.rs
source/: Cargo.toml  Jenkinsfile  README.md
source/libasn-sys/cpp/MECViewServerSDK/webclient_proto/: CMakeLists.txt
source/libmessage_test/cpp/MECViewServerSDK/proto/: CMakeLists.txt
source/libmessages-sys/cpp/MECViewServerSDK/: .project  CMakeLists.txt  Doxyfile.in  exec_cmake_debug.sh  exec_cmake_release.sh  version.h.in
source/libmessages-sys/cpp/MECViewServerSDK/extension/: CMakeLists.txt  queue_listener.h
source/libmessages-sys/cpp/MECViewServerSDK/jenkins/: stage_debug.sh
source/libmessages-sys/cpp/MECViewServerSDK/proto/: CMakeLists.txt  Makefile  environment.asn1
source/libmessages-sys/cpp/MECViewServerSDK/road_clearance/: road_clearance_module_factory.h
source/libmessages-sys/cpp/MECViewServerSDK/webclient_proto/: environment.proto  general.proto
source/libshim/: Cargo.toml
source/libshim/src/: lib.rs
source/mecview_server/: Cargo.toml  Jenkinsfile  log4rs.yml  test
source/mecview_server/src/: client.rs  command_processor.rs  main.rs  server.rs
source/mecview_server/src/adapter/: asn.rs  mod.rs
source/mecview_server/src/algorithm/: manager.rs  mod.rs  sample.rs  vehicle.rs
(+389 files in other folders)
