[package]
name = "mecview_server"
version = "0.3.1"
authors = ["Michael Watzko <michael@watzko.de>"]
description = "MECViewServer implementation in Rust"

[dependencies]
log = "0.4.1"
log4rs = "0.8.0"
tokio = "0.1.5"
tokio-io = "0.1.6"
futures = "0.1.19"
byteorder = "1.2.2"
bytes = "0.4.6"
clap = "2.31.2"

[dependencies.libmessages]
path = "../libmessages/"

[dependencies.libalgorithm]
path = "../libalgorithm/"

# Impelmetnation dependent
[dependencies.sample_algorithm]
path = "../sample_algorithm/"

[dependencies.libasn]
path = "../libasn/"

[dependencies.libshim]
path = "../libshim/"
